tests/semantic_analysis/error/structCondition.c
missing_arg\.c:8:5: error:.*